navbar layout and dashboard complete

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">     -->
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Goal Tracker</title>
   </head>
